# PixelPad

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup.bat  setup.sh  vcpkg.json
.github/workflows/: ci-build-test.yml
Application/: CMakeLists.txt
Application.Tests/: CMakeLists.txt
Application.Tests/src/Graphics/: ButtonSpriteTests.cpp  CanvasViewportTests.cpp  DrawServiceTests.cpp  SpriteTests.cpp
Application.Tests/src/Graphics/Factories/: SpriteFactoryTests.cpp
Application.Tests/src/Services/: DrawServiceTests.cpp
Application.Tests/src/Tools/: ToolboxTests.cpp
Application/include/Enums/: MouseButton.hpp  ToolType.hpp
Application/include/Events/: ColorChangedEvent.hpp  MouseButtonEvent.hpp  ToolTypeChangedEvent.hpp  UIButtonClickedEvent.hpp  WindowCloseEvent.hpp  WindowResizeEvent.hpp
Application/include/Graphics/: ButtonSprite.hpp  CanvasViewport.hpp  DrawService.hpp  IButtonSprite.hpp  IDrawService.hpp  IRenderable.hpp  ISprite.hpp  ITexture.hpp  ITextureManager.hpp  IUIButton.hpp  IUIComponent.hpp  IUIPanel.hpp  IUIRoot.hpp  Sprite.hpp
Application/include/Graphics/Factories/: ISpriteFactory.hpp  SpriteFactory.hpp
Application/include/Inputs/: IInput.hpp
Application/include/Renderers/: IRenderer.hpp
Application/include/Services/: DrawService.hpp  IDrawService.hpp
Application/include/Tools/: IToolbox.hpp  Toolbox.hpp
Application/include/Windows/: IWindow.hpp
Application/src/Graphics/: ButtonSprite.cpp  CanvasViewport.cpp  DrawService.cpp  Sprite.cpp
Application/src/Graphics/Factories/: SpriteFactory.cpp
Application/src/Services/: DrawService.cpp
Application/src/Tools/: Toolbox.cpp
Core/: CMakeLists.txt
Core.Tests/: CMakeLists.txt  CanvasModelTests.cpp
Core.Tests/Graphics/: CanvasSnapshotTests.cpp  CanvasTests.cpp  ColorTests.cpp
Core.Tests/Tools/: EllipseToolTests.cpp  EraserToolTests.cpp  FillToolTests.cpp  LineToolTests.cpp  PencilToolTests.cpp  RectangleToolTests.cpp
Core/include/: CanvasModel.hpp
Core/include/Geometries/: Transform.hpp
Core/include/Graphics/: Canvas.hpp  CanvasSnapshot.hpp  Color.hpp
Core/include/Tools/: DrawCommand.hpp  EllipseTool.hpp  EraserTool.hpp  FillTool.hpp  ITool.hpp  LineTool.hpp  PencilTool.hpp  RectangleTool.hpp  ToolType.hpp
Core/src/: CanvasModel.cpp
Core/src/Graphics/: Canvas.cpp  CanvasSnapshot.cpp
Core/src/Tools/: EllipseTool.cpp  EraserTool.cpp  FillTool.cpp  LineTool.cpp  PencilTool.cpp  RectangleTool.cpp
Entry/: CMakeLists.txt
Entry/include/: ApplicationComposer.hpp  EntryPoint.hpp
Entry/src/: ApplicationComposer.cpp  EntryPoint.cpp  Main.cpp
Infrastructure/: CMakeLists.txt
Infrastructure.Tests/: CMakeLists.txt
Infrastructure.Tests/src/Buses/: EventBusTests.cpp
Infrastructure.Tests/src/Graphics/: UIButtonTests.cpp  UIComponentTests.cpp
Infrastructure.Tests/src/Paths/: AssetPathProviderTests.cpp
Infrastructure/include/: IRenderer.hpp  IWindow.hpp  Renderer.hpp  Window.hpp
Infrastructure/include/Buses/: EventBus.hpp
Infrastructure/include/Events/: MouseButtonEvent.hpp  WindowCloseEvent.hpp  WindowResizeEvent.hpp
Infrastructure/include/Graphics/: SDLTexture.hpp  SDLTextureManager.hpp  UIButton.hpp  UIColorPickerPanel.hpp  UIComponent.hpp  UIRoot.hpp  UIToolsPanel.hpp
Infrastructure/include/Inputs/: IInput.hpp  MouseButton.hpp  SDLInput.hpp
Infrastructure/include/Paths/: AssetPathProvider.hpp  IPathProvider.hpp
Infrastructure/include/Renderers/: IRenderer.hpp  SDLRenderer.hpp
Infrastructure/include/Windows/: IWindow.hpp  SDLWindow.hpp
Infrastructure/src/: Renderer.cpp  Window.cpp
Infrastructure/src/Buses/: EventBus.cpp
Infrastructure/src/Graphics/: SDLTexture.cpp  SDLTextureManager.cpp  UIButton.cpp  UIColorPickerPanel.cpp  UIComponent.cpp  UIRoot.cpp  UIToolsPanel.cpp
Infrastructure/src/Inputs/: SDLInput.cpp
Infrastructure/src/Paths/: AssetPathProvider.cpp
Infrastructure/src/Renderers/: SDLRenderer.cpp
Infrastructure/src/Windows/: SDLWindow.cpp
Presentation/: CMakeLists.txt
Presentation/include/: CanvasController.hpp  PixelPadApplication.hpp
Presentation/include/Controllers/: CanvasController.hpp  RendererController.hpp  UIController.hpp  WindowController.hpp
Presentation/src/: CanvasController.cpp  Main.cpp  PixelPadApplication.cpp
Presentation/src/Controllers/: CanvasController.cpp  RendererController.cpp  UIController.cpp  WindowController.cpp
